# hermeship

./: ARCHITECTURE.md  Cargo.toml  README.en.md  README.md  index.html
.github/workflows/: pages.yml
css/: styles.css
docs/: development-status.md  hermes-event-contract.md  index.html  live-verification.md  observer-plugin.md  operations.md
docs/assets/diagrams/: hermeship-github-discord-codex-workflow.json
docs/plans/: 2026-06-15-hermeship-development-plan.md
docs/superpowers/plans/: 2026-06-23-hermeship-github-pages-deployment.md  2026-06-23-hermeship-static-website.md  2026-06-24-hermeship-website-maturity-refresh.md  2026-06-27-hermeship-hero-brand-dedupe.md
docs/superpowers/specs/: 2026-06-24-hermeship-website-maturity-refresh-design.md
site/: index.html
site/css/: styles.css
site/docs/: index.html
site/js/: main.js
src/: cli.rs  client.rs  config.rs  cron.rs  daemon.rs  dispatch.rs  events.rs  hermes.rs  lib.rs  main.rs  memory.rs  observer_plugin.rs  privacy.rs  release_preflight.rs  router.rs
src/event/: body.rs  compat.rs  mod.rs
src/render/: default.rs
src/sink/: discord.rs  fake.rs  mod.rs
src/source/: git.rs  github.rs  mod.rs  tmux.rs
tasks/: development-checklist.md  lessons.md  todo.md
templates/hermes-plugin/: __init__.py
tests/fixtures/cli/: public_commands.txt
tests/fixtures/hermes/: agent_start.json  invalid_payload.json  session_end.json
tests/fixtures/privacy/: sensitive_payload.json
