[package]
name = "hermeship"
version = "0.1.0"
edition = "2024"
description = "Hermes-native daemon-first event-to-channel notification router"
license = "MIT"
repository = "https://github.com/Yeachan-Heo/hermeship"
keywords = ["hermes", "discord", "notifications", "agent", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[profile.dist]
inherits = "release"
lto = "thin"
